// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`hud overlay at 100x32 1`] = `
"                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  MISS YOU - BONUS TRACK                                                                            
  Oliver Tree, Robin Schulz                                                                         
  Alone In A Crowd                                                                                  
                                                                                                    
  ▶  1:35 █████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  3:26    
  PLAYING   ·   VOL 100%                                                                            
                                                                                                    
 space pause  / search  a go to  l lyrics  u queue  d device  ? keys                                
"
`;

exports[`hud overlay at 80x24 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  MISS YOU - BONUS TRACK                                                        
  Oliver Tree, Robin Schulz                                                     
  Alone In A Crowd                                                              
                                                                                
  ▶  1:35 ████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  3:26    
  PLAYING   ·   VOL 100%                                                        
                                                                                
 space pause  / search  a go to  l lyrics  u queue  d device  ? keys            
"
`;
